test/testcase/version_1/fail/track-nonleaf-content.xspf
<playlist version="1" xmlns="http://xspf.org/ns/0/">
  <trackList>
    <track>FORBIDDEN</track>
  </trackList>
</playlist>
